<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EducationApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="activity_userinfo_label">个人信息</string>
    <string name="user_info_set_icon">请设置头像</string>
    <string name="user_info_nick_name">昵称:</string>
    <string name="user_info_school">学校:</string>
    <string name="user_info_class">班级:</string>
    <string name="user_info_select_role">选择您的身份:</string>
    <string name="cut_image_button_use">使用</string>

    <string name="bottom_tab_work">收发作业</string>
    <string name="bottom_tab_questions">题库</string>
    <string name="bottom_tab_contacts">通讯录</string>
    <string name="bottom_tab_account">我的账号</string>
</resources>
